--- a/demo-wiki/index.html
+++ b/demo-wiki/index.html
@@ -31,6 +31,10 @@
       // Оглавление на странице (справа/внутри)
       toc: { tocMaxLevel: 3, target: 'h2, h3, h4' },
 
+      relativePath: true,
+      basePath: 'https://raw.githubusercontent.com/polekhina01/polekhina01.github.io/main/demo-wiki/',
+
+      
       // Поиск
       search: {
         depth: 3,
